--- a/package.json
+++ b/package.json
@@ -3,17 +3,23 @@
   "version": "1.0.0",
   "description": "",
   "main": "backend/app.js",
+  "proxy": "http://127.0.0.1:5000",
   "scripts": {
     "start": "node backend/app.js",
     "server": "nodemon backend/app.js",
-    "client": "npm start --prefix frontend"
+    "client": "npm start --prefix frontend",
+    "dev:start": "concurrently \"npm run server \" \"npm run client\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1"
   }
 }
